feat: Update to latest openssl 1.1.1o for python-pyenv-doctor

--- a/meta/configs/brew.linux.yaml
+++ b/meta/configs/brew.linux.yaml
@@ -5,4 +5,5 @@
     # Require libs for pyenv doctor -v
     - readline
     - sqlite3
-    - openssl
+    # Update to latest openssl for python-pyenv-doctor
+    - openssl@1.1
