--- a/meta/configs/node.yaml
+++ b/meta/configs/node.yaml
@@ -13,7 +13,6 @@
   - stdout: true
     stderr: true
     command: |
-      export PATH="$HOME/.nodenv/bin:$PATH"
       if [ ! -d ~/.nodenv ]; then
         git clone https://github.com/nodenv/nodenv.git ~/.nodenv
         git clone https://github.com/nodenv/node-build.git $(nodenv root)/plugins/node-build
@@ -22,9 +21,12 @@
         git clone https://github.com/nodenv/node-build-update-defs.git $(nodenv root)/plugins/node-build-update-defs
         git clone https://github.com/nodenv/nodenv-update.git $(nodenv root)/plugins/nodenv-update
         git clone https://github.com/nodenv/nodenv-package-rehash.git "$(nodenv root)"/plugins/nodenv-package-rehash
-      else
-        nodenv update
       fi
+
+      export PATH="$HOME/.nodenv/bin:$PATH"
+      eval "$(nodenv init -)"
+
+      nodenv update
 
       if [ -r ~/.node-version ] && [ ! -d ~/.nodenv/versions/$(cat ~/.node-version) ]; then
         nodenv install $(cat ~/.node-version)
