fix: Install tmuxinator without sudo and install neovim using brew

--- a/meta/configs/tmux.linux.yaml
+++ b/meta/configs/tmux.linux.yaml
@@ -7,7 +7,7 @@
     - description: Install tmuxinator
       stdout: true
       stderr: true
-      command: sudo gem install tmuxinator
+      command: gem install tmuxinator
     - description: Install tmuxifier
       stdout: true
       stderr: true
