--- a/meta/configs/vim.linux.yaml
+++ b/meta/configs/vim.linux.yaml
@@ -24,10 +24,12 @@
     ~/.config/nvim/init.vim: editors/vim/config/nvim/init.linux.vim
     ~/.vim/plugins.vim: editors/vim/plugins/plugins_linux.vim
     ~/.vim/plugins_shared.vim: editors/vim/plugins/plugins_shared.vim
+- brew:
+    - neovim
 - shell++:
-    - - pip2 install neovim
-      - Installing Python 2 NeoVim plugin
-    - - pip3 install neovim
-      - Installing Python 3 NeoVim plugin
+    # - - pip2 install neovim
+    #   - Installing Python 2 NeoVim plugin
+    # - - pip3 install neovim
+    #   - Installing Python 3 NeoVim plugin
     - - nvim -c 'PlugClean!' -c 'PlugInstall' -c 'PlugUpdate' -c 'q' -c 'q'
       - Installing vim plugins
