--- a/meta/configs/vim.osx.yaml
+++ b/meta/configs/vim.osx.yaml
@@ -21,13 +21,15 @@
     ~/.vim/vim-fireplace-mappings.vim: editors/vim/vim/vim-fireplace-mappings.vim
     ~/.vimrc: editors/vim/vimrc
     ~/.gvimrc: editors/vim/gvimrc
-    ~/.config/nvim/init.vim: editors/vim/config/nvim/init.linux.vim
-    ~/.vim/plugins.vim: editors/vim/plugins/plugins_linux.vim
+    ~/.config/nvim/init.vim: editors/vim/config/nvim/init.osx.vim
+    ~/.vim/plugins.vim: editors/vim/plugins/plugins_osx.vim
     ~/.vim/plugins_shared.vim: editors/vim/plugins/plugins_shared.vim
+- brew:
+    - neovim
 - shell++:
-    - - pip2 install neovim
-      - Installing Python 2 NeoVim plugin
-    - - pip3 install neovim
-      - Installing Python 3 NeoVim plugin
+    # - - pip2 install neovim
+    #   - Installing Python 2 NeoVim plugin
+    # - - pip3 install neovim
+    #   - Installing Python 3 NeoVim plugin
     - - nvim -c 'PlugClean!' -c 'PlugInstall' -c 'PlugUpdate' -c 'q' -c 'q'
       - Installing vim plugins
