feat: [bash] Add starship and ble.sh and support debug startup time
+ startship install for all users' Login Shell by default

--- a/meta/configs/apt.linux.yaml
+++ b/meta/configs/apt.linux.yaml
@@ -1,3 +1,7 @@
+- shell++:
+    - - sudo dpkg --configure -a
+      - Fix for dpkg was interrupted on Ubuntu 18.04
+
 - aptget:
     neovim:
       ppa_source: 'ppa:neovim-ppa/stable'
