fix: When use `brew install` on Ubuntu 16.04 cause `curl: (60) server certificate verification failed`
* Fix krb5 fails to install on ubuntu due to not finding the tcl headers

--- a/meta/configs/vim.linux.yaml
+++ b/meta/configs/vim.linux.yaml
@@ -25,6 +25,12 @@
     ~/.vim/plugins.vim: editors/vim/plugins/plugins_linux.vim
     ~/.vim/plugins_shared.vim: editors/vim/plugins/plugins_shared.vim
 - brew:
+    # See https://github.com/Homebrew/linuxbrew-core/issues/20946
+    - tcl-tk # Require for neovim's dependencies: krb5
+- shell++:
+    - - brew link tcl-tk
+      - Re-link tcl headers
+- brew:
     - neovim
 - shell++:
     # - - pip2 install neovim
