--- a/meta/configs/brew.linux.yaml
+++ b/meta/configs/brew.linux.yaml
@@ -1,3 +1,8 @@
+# This fix `curl: (60) server certificate verification failed. CAfile: /etc/ssl/certs/ca-certificates.crt CRLfile: none` when use `brew install` on Ubuntu 16.04
+# See https://www.zoocha.com/news/fixing-issues-multiple-servers-caused-recently-expired-root-certificate
+- aptget:
+    - libgnutls-openssl27
+
 - brew:
     - fzf
     - todo-txt
