--- a/meta/configs/brew.linux.yaml
+++ b/meta/configs/brew.linux.yaml
@@ -12,3 +12,28 @@
     - sqlite3
     # Update to latest openssl for python-pyenv-doctor
     - openssl@1.1
+
+- shell++:
+  - description: Build and install latest curl on Ubuntu 16.04
+    condition: '[ "$(. /etc/os-release; echo $VERSION_ID)" = "16.04" ]'
+  - stdout: true
+    stderr: true
+    command: |
+      # Enable apt-get build-dep See https://askubuntu.com/questions/496549/error-you-must-put-some-source-uris-in-your-sources-list
+      sudo cp /etc/apt/sources.list /etc/apt/sources.list~
+      sudo sed -Ei 's/^# deb-src /deb-src /' /etc/apt/sources.list
+      sudo apt-get update
+
+      CURL_VERSION=7.83.1
+
+      sudo apt-get build-dep -y curl
+      mkdir ~/curl
+      cd ~/curl
+      wget http://curl.haxx.se/download/curl-${CURL_VERSION}.tar.bz2
+      tar -xvjf curl-${CURL_VERSION}.tar.bz2
+      cd curl-${CURL_VERSION}
+      ./configure --prefix=/usr --with-openssl=$(brew --prefix openssl@1.1)
+      make
+      sudo make install
+      sudo ldconfig
+      curl --version
