--- a/meta/configs/unity3d.osx.yaml
+++ b/meta/configs/unity3d.osx.yaml
@@ -52,7 +52,8 @@
       # ~/.Unity3D/unity-install.sh 2019.2 12f1
 
       # Install Android dependencies to match Unity version
-      sudo ~/install-unity install -y -p Unity,iOS,Android 2019.4.3f1
+      sudo ~/install-unity install -y -p Unity,iOS,Android 2021.3.11f1
+      sudo ~/install-unity install -y -p Unity,iOS,Android 2021.3.9f1
 
       # Create scripts to quick update Unity3D to latest patch version.
       # 2019.4
@@ -62,11 +63,18 @@
       sudo ~/install-unity install --upgrade -y -p Unity,iOS,Android 2019.4
       EOF
 
-      # 2018.4
-      cat <<- EOF > ~/update-unity-2018.4.sh
+      # # 2018.4
+      # cat <<- EOF > ~/update-unity-2018.4.sh
+      # #!/bin/bash
+
+      # sudo ~/install-unity install --upgrade -y -p Unity,iOS,Android 2018.4
+      # EOF
+
+      # 2021.3
+      cat <<- EOF > ~/update-unity-2021.3.sh
       #!/bin/bash
 
-      sudo ~/install-unity install --upgrade -y -p Unity,iOS,Android 2018.4
+      sudo ~/install-unity install --upgrade -y -p Unity,iOS,Android 2021.3
       EOF
 
       chmod +x ~/update-unity-*
@@ -143,19 +151,21 @@
       # macOS Catalina https://developer.android.com/studio/projects/install-ndk#specific-version
       # echo "Because the Catalina stronger verification, IL2CPP build will fail if NDK version is NOT install via the SDK Installer in Android Studio."
       # See https://forum.unity.com/threads/il2cppcore-dll-did-not-run-properly.738350/#post-5392932
-      echo y | sdkmanager --install "ndk;16.1.4479499"
+      # echo y | sdkmanager --install "ndk;16.1.4479499"
 
       # Unity 2019.3 (use built-in dependencies)
       # echo y | sdkmanager --install "ndk;19.2.5345600"
 
       # Android SDK build tools
       # echo y | sdkmanager "tools" "platform-tools" "build-tools;28.0.3"
-      echo y | sdkmanager "tools" "platform-tools" "build-tools;30.0.2" # 11/13/2020 require build tools m29
+      # echo y | sdkmanager "tools" "platform-tools" "build-tools;30.0.2" # 11/13/2020 require build tools m29
+      echo y | sdkmanager "tools" "platform-tools" "build-tools;33.0.0"
 
       echo y | sdkmanager "extras;android;m2repository"
-      echo y | sdkmanager "platforms;android-16" "sources;android-16"
-      echo y | sdkmanager "platforms;android-26" "sources;android-26"
+      # echo y | sdkmanager "platforms;android-16" "sources;android-16"
+      # echo y | sdkmanager "platforms;android-26" "sources;android-26"
       # echo y | sdkmanager "platforms;android-27" "sources;android-27"
       # echo y | sdkmanager "platforms;android-28" "sources;android-28"
       echo y | sdkmanager "platforms;android-29" "sources;android-29" # platforms;android-29 is required for build AndroidX by Unity
       echo y | sdkmanager "platforms;android-30" "sources;android-30"
+      echo y | sdkmanager "platforms;android-30" "sources;android-31"
