feat: Add ppa:deadsnakes/ppa to install Python 3.9+

--- a/meta/configs/apt.linux.yaml
+++ b/meta/configs/apt.linux.yaml
@@ -11,6 +11,8 @@
       ppa_source: 'ppa:aacebedo/fasd'
     hstr:
       ppa_source: 'ppa:ultradvorka/ppa'
+    deadsnakes: # Python 3.9+
+      ppa_source: 'ppa:deadsnakes/ppa'
 # - aptget:
 #     fish:
 #       ppa_source: 'ppa:c/release-2'
