--- a/meta/configs/brew.linux.yaml
+++ b/meta/configs/brew.linux.yaml
@@ -12,6 +12,7 @@
     - sqlite3
     # Update to latest openssl for python-pyenv-doctor
     - openssl@1.1
+    - neofetch # Ubuntu 16.04
 
 - shell++:
   - description: Build and install latest curl on Ubuntu 16.04
@@ -37,3 +38,12 @@
       sudo make install
       sudo ldconfig
       curl --version
+
+- shell++:
+  - description: Install latest fzf on Ubuntu 16.04/18.04
+    # condition: '[ "$(. /etc/os-release; echo $VERSION_ID)" = "16.04" ]'
+  - stdout: true
+    stderr: true
+    command: |
+      git clone --depth 1 https://github.com/junegunn/fzf.git ~/.fzf
+      ~/.fzf/install --all --xdg --no-key-bindings --no-update-rc
