chore: Remove homebrew/cask-versions that deprecated by default homebrew install

--- a/meta/configs/homebrew.yaml
+++ b/meta/configs/homebrew.yaml
@@ -30,7 +30,7 @@
 #     no-upgrade: true
 
 - tap:
-  - homebrew/cask-versions
+  # - homebrew/cask-versions # Deprecated by default homebrew install
   - homebrew/cask
   # - pivotal/tap
 
