chore: Disablle all homebrew tap that included in default install

--- a/meta/configs/homebrew.yaml
+++ b/meta/configs/homebrew.yaml
@@ -29,17 +29,18 @@
 #     file: ~/.Brewfile
 #     no-upgrade: true
 
-- tap:
-  # - homebrew/cask-versions # Deprecated by default homebrew install
-  - homebrew/cask
-  # - pivotal/tap
+# Deprecated by default homebrew install
+# - tap:
+#   - homebrew/cask-versions
+#   - homebrew/cask
+#   - pivotal/tap
 
 - brew:
   - mas
   - git-extras
   - git-flow-avh
   - htop
-  - exa
+  # - exa
   # - fish
   - tmux
   - tmate
