fix: Replace `exa` with `lsd` (Error: exa has been disabled because it is not maintained upstream!)

--- a/meta/configs/homebrew.yaml
+++ b/meta/configs/homebrew.yaml
@@ -40,7 +40,7 @@
   - git-extras
   - git-flow-avh
   - htop
-  # - exa
+  - lsd # Replace `exa` (Error: exa has been disabled because it is not maintained upstream!)
   # - fish
   - tmux
   - tmate
