chore: Install git-credential-manager for new macOS machine (Apple Silicon)

--- a/meta/configs/homebrew.yaml
+++ b/meta/configs/homebrew.yaml
@@ -56,6 +56,7 @@
   # For git-restore-mtime (replace git-settimes.pl)
   - git-tools
   - gitversion
+  - git-credential-manager # Require for Apple Silicon, see https://github.com/git-ecosystem/git-credential-manager/issues/574
 
 # Support for dedupe.sh, see https://apple.stackexchange.com/questions/69223/how-to-replace-mac-os-x-utilities-with-gnu-core-utilities
 # - brew:
