fix: Load ZSH plugins on macOS

--- a/meta/configs/homebrew.yaml
+++ b/meta/configs/homebrew.yaml
@@ -71,7 +71,10 @@
 #   - gnu-cp
 #   - jdupes
 
-- brew: [zsh, zsh-completions, zsh-syntax-highlighting]
+- brew:
+  # - zsh # arm64 on Apple Silicon
+  - zsh-completions
+  - zsh-syntax-highlighting
 
 - cask:
   - gitkraken
