--- a/shells/plugins/starship/starship.toml
+++ b/shells/plugins/starship/starship.toml
@@ -34,3 +34,7 @@ symbol = "🌱 "
 truncation_length = 4
 truncation_symbol = ""
 ignore_branches = ["master", "main"]
+
+# Fix ssh_symbol on XShell
+[hostname]
+ssh_symbol = " "
