--- a/meta/configs/go.yaml
+++ b/meta/configs/go.yaml
@@ -3,6 +3,7 @@
       create: true
       relink: true
       force: true
-- link:
-    ~/.go-version: development/go/go-version
-    ~/.config/zsh/settings/go.zsh: development/go/zsh/settings/go.zsh
+# Obsoleted by mise
+# - link:
+#     ~/.go-version: development/go/go-version
+#     ~/.config/zsh/settings/go.zsh: development/go/zsh/settings/go.zsh
