--- a/meta/configs/node.yaml
+++ b/meta/configs/node.yaml
@@ -4,34 +4,35 @@
       relink: true
       force: true
 - link:
-    ~/.node-version: development/node/node-version
+    # ~/.node-version: development/node/node-version
     ~/.npmrc: development/node/npmrc
-    ~/.config/zsh/settings/nodejs.zsh: development/node/zsh/settings/nodejs.zsh
-- shell++:
-  - description: Install nodenv
-    condition: '! hash nodenv 2>/dev/null || test -h $(which nodenv)'
-  - stdout: true
-    stderr: true
-    command: |
-      if [ ! -d ~/.nodenv ]; then
-        git clone https://github.com/nodenv/nodenv.git ~/.nodenv
-        git clone https://github.com/nodenv/node-build.git $(nodenv root)/plugins/node-build
-        git clone https://github.com/nodenv/nodenv-package-rehash.git "$(nodenv root)"/plugins/nodenv-package-rehash
-        git clone https://github.com/nodenv/nodenv-package-json-engine.git $(nodenv root)/plugins/nodenv-package-json-engine
-        git clone https://github.com/nodenv/nodenv-vars.git $(nodenv root)/plugins/nodenv-vars
-        git clone https://github.com/nodenv/node-build-update-defs.git $(nodenv root)/plugins/node-build-update-defs
-        git clone https://github.com/nodenv/nodenv-update.git $(nodenv root)/plugins/nodenv-update
-      fi
+    # ~/.config/zsh/settings/nodejs.zsh: development/node/zsh/settings/nodejs.zsh
+# Obsoleted by mise
+# - shell++:
+#   - description: Install nodenv
+#     condition: '! hash nodenv 2>/dev/null || test -h $(which nodenv)'
+#   - stdout: true
+#     stderr: true
+#     command: |
+#       if [ ! -d ~/.nodenv ]; then
+#         git clone https://github.com/nodenv/nodenv.git ~/.nodenv
+#         git clone https://github.com/nodenv/node-build.git $(nodenv root)/plugins/node-build
+#         git clone https://github.com/nodenv/nodenv-package-rehash.git "$(nodenv root)"/plugins/nodenv-package-rehash
+#         git clone https://github.com/nodenv/nodenv-package-json-engine.git $(nodenv root)/plugins/nodenv-package-json-engine
+#         git clone https://github.com/nodenv/nodenv-vars.git $(nodenv root)/plugins/nodenv-vars
+#         git clone https://github.com/nodenv/node-build-update-defs.git $(nodenv root)/plugins/node-build-update-defs
+#         git clone https://github.com/nodenv/nodenv-update.git $(nodenv root)/plugins/nodenv-update
+#       fi
 
-      export PATH="$HOME/.nodenv/bin:$PATH"
-      eval "$(nodenv init -)"
+#       export PATH="$HOME/.nodenv/bin:$PATH"
+#       eval "$(nodenv init -)"
 
-      nodenv update
+#       nodenv update
 
-      if [ -r ~/.node-version ] && [ ! -d ~/.nodenv/versions/$(cat ~/.node-version) ]; then
-        nodenv install $(cat ~/.node-version)
-      fi
+#       if [ -r ~/.node-version ] && [ ! -d ~/.nodenv/versions/$(cat ~/.node-version) ]; then
+#         nodenv install $(cat ~/.node-version)
+#       fi
 
-      nodenv package-hooks install --all
+#       nodenv package-hooks install --all
 
-      curl -fsSL https://github.com/nodenv/nodenv-installer/raw/master/bin/nodenv-doctor | bash
+#       curl -fsSL https://github.com/nodenv/nodenv-installer/raw/master/bin/nodenv-doctor | bash
