--- a/meta/configs/smartcd.linux.yaml
+++ b/meta/configs/smartcd.linux.yaml
@@ -3,44 +3,45 @@
       create: true
       relink: true
       force: true
-- shell++:
-    - description: Install smartcd
-      condition: '! hash smartcd 2>/dev/null || test -h $(which smartcd)'
-    - stdout: true
-      stderr: true
-      command: >
-        if [ -d ~/.smartcd/.git ]; then
-          cd ~/.smartcd
-          git pull
-        else
-          git clone https://github.com/cxreg/smartcd.git ~/.smartcd
+# Obsoleted by direnv
+# - shell++:
+#     - description: Install smartcd
+#       condition: '! hash smartcd 2>/dev/null || test -h $(which smartcd)'
+#     - stdout: true
+#       stderr: true
+#       command: >
+#         if [ -d ~/.smartcd/.git ]; then
+#           cd ~/.smartcd
+#           git pull
+#         else
+#           git clone https://github.com/cxreg/smartcd.git ~/.smartcd
 
-          echo "*********************************************************************"
-          echo "IMPORTANT NOTE: If you just installed smartcd for the first time and"
-          echo "you haven't created a new shell, it may not be loaded yet.  Run"
-          echo
-          echo "    source ~/.smartcd_config"
-          echo "*********************************************************************"
-          echo
-          echo "To get started, create a few scripts.  Its easy!  Try this:"
-          echo
-          echo "    echo 'echo hello there from \$PWD' | smartcd edit enter"
-          echo "    echo 'echo goodbye from \$PWD' | smartcd edit leave"
-          echo
-          echo "Then simply leave the directory and come back.  For a more practical"
-          echo "example, how about tweaking your PATH?"
-          echo
-          echo "    echo \"autostash PATH=\$PWD/bin:\\\$PATH\" | smartcd edit enter"
-          echo
-          echo "(side note: the quoting rules when editing in this fashion can be a bit"
-          echo "awkward, so feel free to run \`smartcd edit\` interactively too!"
-          echo
-          echo "When you enter the directory, your \$PATH will be updated and when you"
-          echo "leave it is restored to its previous value automagically.  How cool is"
-          echo "that?  For more detail on what is possible, read the documentation in"
-          echo "~/.smartcd/lib/core/smartcd or refer to the README at"
-          echo "https://github.com/cxreg/smartcd"
-        fi
-- link:
-    ~/.smartcd_config: apps/smartcd/smartcd_config
-    ~/.config/zsh/settings/smartcd.zsh: apps/smartcd/zsh/settings/smartcd.zsh
+#           echo "*********************************************************************"
+#           echo "IMPORTANT NOTE: If you just installed smartcd for the first time and"
+#           echo "you haven't created a new shell, it may not be loaded yet.  Run"
+#           echo
+#           echo "    source ~/.smartcd_config"
+#           echo "*********************************************************************"
+#           echo
+#           echo "To get started, create a few scripts.  Its easy!  Try this:"
+#           echo
+#           echo "    echo 'echo hello there from \$PWD' | smartcd edit enter"
+#           echo "    echo 'echo goodbye from \$PWD' | smartcd edit leave"
+#           echo
+#           echo "Then simply leave the directory and come back.  For a more practical"
+#           echo "example, how about tweaking your PATH?"
+#           echo
+#           echo "    echo \"autostash PATH=\$PWD/bin:\\\$PATH\" | smartcd edit enter"
+#           echo
+#           echo "(side note: the quoting rules when editing in this fashion can be a bit"
+#           echo "awkward, so feel free to run \`smartcd edit\` interactively too!"
+#           echo
+#           echo "When you enter the directory, your \$PATH will be updated and when you"
+#           echo "leave it is restored to its previous value automagically.  How cool is"
+#           echo "that?  For more detail on what is possible, read the documentation in"
+#           echo "~/.smartcd/lib/core/smartcd or refer to the README at"
+#           echo "https://github.com/cxreg/smartcd"
+#         fi
+# - link:
+#     ~/.smartcd_config: apps/smartcd/smartcd_config
+#     ~/.config/zsh/settings/smartcd.zsh: apps/smartcd/zsh/settings/smartcd.zsh
