--- a/meta/configs/vim.linux.yaml
+++ b/meta/configs/vim.linux.yaml
@@ -20,7 +20,7 @@
     ~/.vim/update_visual_highlight_color.vim: editors/vim/vim/update_visual_highlight_color.vim
     ~/.vim/vim-fireplace-mappings.vim: editors/vim/vim/vim-fireplace-mappings.vim
     ~/.vimrc: editors/vim/vimrc
-    ~/.gvimrc: editors/vim/gvimrc
+    # ~/.gvimrc: editors/vim/gvimrc
     ~/.config/nvim/init.vim: editors/vim/config/nvim/init.linux.vim
     ~/.vim/plugins.vim: editors/vim/plugins/plugins_linux.vim
     ~/.vim/plugins_shared.vim: editors/vim/plugins/plugins_shared.vim
