--- a/meta/configs/zsh.linux.yaml
+++ b/meta/configs/zsh.linux.yaml
@@ -42,7 +42,7 @@
     ~/.config/zsh/settings/abbreviations.zsh: shells/zsh/config/zsh/settings/abbreviations.zsh
     ~/.config/zsh/settings/bindkeys.zsh: shells/zsh/config/zsh/settings/bindkeys.zsh
     ~/.config/zsh/settings/externals: shells/zsh/config/zsh/settings/externals
-    ~/.config/zsh/settings/fasd.zsh: shells/zsh/config/zsh/settings/fasd.zsh
+    # ~/.config/zsh/settings/fasd.zsh: shells/zsh/config/zsh/settings/fasd.zsh
     ~/.config/zsh/settings/zshsetopts.zsh: shells/zsh/config/zsh/settings/zshsetopts.zsh
     # ~/.config/zsh/themes/prompt_anishathalye_setup: shells/zsh/config/zsh/themes/prompt_anishathalye_setup
     # ~/.config/zsh/themes/prompt_ayk_setup: shells/zsh/config/zsh/themes/prompt_ayk_setup
